[fix] top bar navigation it’s hidden behind sui-box

--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -5,6 +5,7 @@
 		height: auto;
 		display: block;
 		position: fixed;
+		z-index: 9;
 		top: 0;
 		left: 0;
 		margin: 0;
